--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "zomato-restaurants",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ssatyamchauhan.github.io/Search-zomato-restaurants/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
@@ -15,6 +16,8 @@
     "zomato.js": "^1.1.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
   }
 }
