--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "zomato-restaurants",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ssatyamchauhan.github.io/Search-zomato-restaurants/",
+  "homepage": "https://zomato.learnreact.ml/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
