--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "private": true,
   "homepage": "https://zomato.learnreact.ml/",
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
+    "@material-ui/core": "^4.9.2",
+    "@testing-library/jest-dom": "^5.1.1",
     "@testing-library/react": "^9.4.0",
-    "@testing-library/user-event": "^7.2.1",
+    "@testing-library/user-event": "^8.1.0",
     "cors": "^2.8.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "3.4.0",
     "zomato-api": "^0.1.2",
     "zomato.js": "^1.1.0"
   },
@@ -19,7 +20,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
